Migrated to Java 11 and Spring Boot 2.7